--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,44 @@
-title: Georgi Kostov's Portfolio
-description: A portfolio and blog for Georgi Kostov
+title: "Georgi Kostov's Portfolio"
+description: "A portfolio and blog for Georgi Kostov"
+author: "Georgi Kostov"
 show_downloads: true
-google_analytics:
+google_analytics: # Add your Google Analytics ID here
 theme: jekyll-theme-cayman
 remote_theme: pages-themes/cayman@v0.2.0
 
 # Navigation Links
-# Customize the navigation bar links
 links:
   Home: "/"
   Projects: "/pages/projects/"
   Publications: "/pages/publications/"
   Blog: "/pages/blog/"
 
-  # Blog Configuration
+# Blog Configuration
 collections:
   posts:
     output: true
     permalink: /blog/:title/  # Clean URLs for blog posts
+
+# Plugins
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
+  - jekyll-seo-tag       # Adds SEO metadata
+  - jekyll-feed          # Generates RSS feed for the blog
+  - jekyll-sitemap       # Creates a sitemap for search engines
+  - jekyll-paginate      # Enables pagination for blog posts
 
+# Pagination Settings
+paginate: 5  # Number of posts per page
+paginate_path: "/blog/page:num/"
 
+# Markdown Configuration
+markdown: kramdown
+kramdown:
+  input: GFM # GitHub Flavored Markdown
+
+# Exclude Unnecessary Files
+exclude:
+  - node_modules
+  - vendor
+  - Gemfile
+  - Gemfile.lock
