Update with url

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -27,7 +27,7 @@
   description:
     - "Established a small video production studio, including choosing equipment and setting up a YouTube channel."
     - "Produced videos, managing camera work, lighting, and post-production."
-    - "Created content for a YouTube channel: [redaktion24TV](https://www.youtube.com/user/redaktion24TV)."
+    - "Created content for a YouTube channel: <a href='https://www.youtube.com/user/redaktion24TV'>redaktion24TV</a>."
 
 - duration: "2011 - 2012"
   title: "V4 GmbH"
