--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
 title: "Georgi Kostov's Portfolio"
 description: "A portfolio and blog for Georgi Kostov"
 author: "Georgi Kostov"
-show_downloads: true
-google_analytics: # Add your Google Analytics ID here
 theme: jekyll-theme-cayman
-remote_theme: pages-themes/cayman@v0.2.0
+
+# Base URL for GitHub Pages
+baseurl: "" # No baseurl needed since you're using the default username.github.io domain
+url: "https://georgikostov.github.io"
 
 # Navigation Links
 links:
   Home: "/"
   Projects: "/pages/projects/"
-  Publications: "/pages/publications/"
   Blog: "/pages/blog/"
+  Publications: "/pages/publications/"
 
 # Blog Configuration
 collections:
@@ -27,18 +28,19 @@ plugins:
   - jekyll-sitemap       # Creates a sitemap for search engines
   - jekyll-paginate      # Enables pagination for blog posts
 
-# Pagination Settings
-paginate: 5  # Number of posts per page
-paginate_path: "/blog/page:num/"
-
 # Markdown Configuration
 markdown: kramdown
 kramdown:
   input: GFM # GitHub Flavored Markdown
 
-# Exclude Unnecessary Files
+# Pagination Configuration
+paginate: 5                      # Number of posts per page
+paginate_path: /blog/page:num/   # Path for paginated pages
+
+# Exclude Unnecessary Files and Directories
 exclude:
   - node_modules
   - vendor
   - Gemfile
   - Gemfile.lock
+  - README.md
